Parsed more stuff; started moving model to f#

--- a/StateDiagramCodeGen/StateDiagramCodeGen/StateDiagramCodeGen.csproj
+++ b/StateDiagramCodeGen/StateDiagramCodeGen/StateDiagramCodeGen.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Sprache" Version="2.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StateDiagramCodeGen.Model\StateDiagramCodeGen.Model.fsproj" />
+  </ItemGroup>
+
 </Project>
