--- a/StateDiagramCodeGen/StateDiagramCodeGen/StateDiagramCodeGen.csproj
+++ b/StateDiagramCodeGen/StateDiagramCodeGen/StateDiagramCodeGen.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Functional.Maybe" Version="1.1.1" />
     <PackageReference Include="Humanizer.Core" Version="2.4.2" />
     <PackageReference Include="Sprache" Version="2.1.2" />
   </ItemGroup>
