--- a/src/StateDiagramNet.Tests/StateDiagramNet.Tests.csproj
+++ b/src/StateDiagramNet.Tests/StateDiagramNet.Tests.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net472</TargetFramework>
-    <LangVersion>latest</LangVersion>
+    <TargetFramework>net6.0</TargetFramework>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StateDiagramCodeGen\StateDiagramCodeGen.csproj" />
+    <ProjectReference Include="..\StateDiagramNet\StateDiagramNet.csproj" />
   </ItemGroup>
 
 </Project>
